@@ -22,8 +22,9 @@ public class beak_N과M_8 {
 		}
 		
 		for(int i=0; i<n; i++) {
-			//i가 더 커야돼
-			if(result.size() !=0 && i <numbers.indexOf(result.get(result.size()-1)))
+			
+			//result가 가진 끝값의 number인덱스가 i이상이어야 한다.
+			if(result.size() !=0 && i <numbers.indexOf(result.getLast()))
 				continue;
 			
 			result.add(numbers.get(i));
